Norm for multiple functions carefull with tests
fixed refresh.c and event.c

--- a/test/gui_test/Makefile
+++ b/test/gui_test/Makefile
@@ -2,6 +2,8 @@ NAME =			gui_test
 
 SRC =			main.c				\
 			$(wildcard ../../gui/*.c)	\
+			$(wildcard ../../vector/*.c)	\
+			$(wildcard ../../div/*.c)	\
 
 OBJS =			$(SRC:.c=.o)
 
