--- a/test/textbox/Makefile
+++ b/test/textbox/Makefile
@@ -9,20 +9,25 @@ SRC =			main.c						\
 			../../display/set_pixel.c			\
 			../../display/set_zpixel.c			\
 			../../src/mult_arrondi.c			\
+			../../textbox/check_mouse_button.c		\
+			../../textbox/copy_selection.c			\
+			../../textbox/cut_selection.c			\
 			../../textbox/delete_text_box.c			\
 			../../textbox/display.c				\
-			../../textbox/event.c				\
-			../../textbox/new.c				\
-			../../textbox/erase_selection.c			\
-			../../textbox/copy_selection.c			\
-			../../textbox/paste.c				\
-			../../textbox/cut_selection.c			\
-			../../textbox/draw_cursor.c			\
 			../../textbox/draw_bg.c				\
+			../../textbox/draw_cursor.c			\
 			../../textbox/draw_selected_area.c		\
+			../../textbox/erase_selection.c			\
+			../../textbox/event.c				\
 			../../textbox/get_cursor_pos.c			\
-			../../textbox/check_mouse_button.c		\
-			../../textbox/manage_mouse_buton_event.c	\
+			../../textbox/manage_control_key.c		\
+			../../textbox/manage_key_event.c		\
+			../../textbox/manage_mouse_button_event.c	\
+			../../textbox/manage_shift_key.c		\
+			../../textbox/manage_solo_key.c			\
+			../../textbox/manage_text_event.c		\
+			../../textbox/new.c				\
+			../../textbox/paste.c				\
 			../../string/append_str.c			\
 			../../string/append_string.c			\
 			../../string/clear.c				\
@@ -43,6 +48,7 @@ SRC =			main.c						\
 			../../vector/clear.c				\
 			../../vector/delete.c				\
 			../../vector/new.c				\
+			../../vector/new_vector.c			\
 			../../vector/pop.c				\
 			../../vector/push.c				\
 			../../vector/pop_index.c			\
@@ -50,16 +56,19 @@ SRC =			main.c						\
 			../../vector/memcpy.c				\
 
 
-
 OBJS =			$(SRC:.c=.o)
 
 INCLUDE =		-I./../../include
 
-CC =			bcc
+CC =			gcc
 
 FLAGS =			-Wall -Wextra -g
 
-LDFLAGS =		-L./
+LDFLAGS =		-L./ -llapin -lsfml-graphics -lsfml-audio -lsfml-window         \
+                        -lsfml-system -lstdc++ -lm -ldl -lpthread                       \
+                        -lopencv_imgproc -lopencv_highgui                               \
+                        -lopencv_objdetect -lopencv_videoio                             \
+                        -lopencv_core -lavcall                                          \
 
 all:$(NAME)
 
