--- a/test/textbox/Makefile
+++ b/test/textbox/Makefile
@@ -1,60 +1,59 @@
 NAME =			textbox
 
-SRC =			main.c						\
-			../../display/blit.c				\
-			../../display/draw_rectangle.c			\
-			../../display/get_npos.c			\
-			../../display/get_ratio.c			\
-			../../display/get_value.c			\
-			../../display/set_pixel.c			\
-			../../display/set_zpixel.c			\
-			../../src/mult_arrondi.c			\
-			../../textbox/check_mouse_button.c		\
-			../../textbox/copy_selection.c			\
-			../../textbox/cut_selection.c			\
-			../../textbox/delete_text_box.c			\
-			../../textbox/display.c				\
-			../../textbox/draw_bg.c				\
-			../../textbox/draw_cursor.c			\
-			../../textbox/draw_selected_area.c		\
-			../../textbox/erase_selection.c			\
-			../../textbox/event.c				\
-			../../textbox/get_cursor_pos.c			\
-			../../textbox/manage_control_key.c		\
-			../../textbox/manage_key_event.c		\
-			../../textbox/manage_mouse_button_event.c	\
-			../../textbox/manage_shift_key.c		\
-			../../textbox/manage_solo_key.c			\
-			../../textbox/manage_text_event.c		\
-			../../textbox/new.c				\
-			../../textbox/paste.c				\
-			../../string/append_str.c			\
-			../../string/append_string.c			\
-			../../string/clear.c				\
-			../../string/compare.c				\
-			../../string/compare_str.c			\
-			../../string/delete.c				\
-			../../string/erase.c				\
-			../../string/get_char.c				\
-			../../string/get_content.c			\
-			../../string/get_len.c				\
-			../../string/insert.c				\
-			../../string/new.c				\
-			../../string/new_str.c				\
-			../../string/new_string.c			\
-			../../string/pop_back.c				\
-			../../string/push_back.c			\
-			../../string/shrink_to_fit.c			\
-			../../vector/clear.c				\
-			../../vector/delete.c				\
-			../../vector/new.c				\
-			../../vector/new_vector.c			\
-			../../vector/pop.c				\
-			../../vector/push.c				\
-			../../vector/pop_index.c			\
-			../../vector/view.c				\
-			../../vector/memcpy.c				\
-
+SRC =			main.c							\
+			../../src/draw/blit.c					\
+			../../src/draw/draw_rectangle.c				\
+			../../src/draw/get_npos.c				\
+			../../src/draw/get_ratio.c				\
+			../../src/draw/get_value.c				\
+			../../src/draw/set_pixel.c				\
+			../../src/draw/set_zpixel.c				\
+			../../objects/textbox/mult_arrondi.c			\
+			../../objects/textbox/check_mouse_button.c		\
+			../../objects/textbox/copy_selection.c			\
+			../../objects/textbox/cut_selection.c			\
+			../../objects/textbox/delete_text_box.c			\
+			../../objects/textbox/display.c				\
+			../../objects/textbox/draw_bg.c				\
+			../../objects/textbox/draw_cursor.c			\
+			../../objects/textbox/draw_selected_area.c		\
+			../../objects/textbox/erase_selection.c			\
+			../../objects/textbox/event.c				\
+			../../objects/textbox/get_cursor_pos.c			\
+			../../objects/textbox/manage_control_key.c		\
+			../../objects/textbox/manage_key_event.c		\
+			../../objects/textbox/manage_mouse_button_event.c	\
+			../../objects/textbox/manage_shift_key.c		\
+			../../objects/textbox/manage_solo_key.c			\
+			../../objects/textbox/manage_text_event.c		\
+			../../objects/textbox/new.c				\
+			../../objects/textbox/paste.c				\
+			../../src/string/append_str.c				\
+			../../src/string/append_string.c			\
+			../../src/string/clear.c				\
+			../../src/string/compare.c				\
+			../../src/string/compare_str.c				\
+			../../src/string/delete.c				\
+			../../src/string/erase.c				\
+			../../src/string/get_char.c				\
+			../../src/string/get_content.c				\
+			../../src/string/get_len.c				\
+			../../src/string/insert.c				\
+			../../src/string/new.c					\
+			../../src/string/new_str.c				\
+			../../src/string/new_string.c				\
+			../../src/string/pop_back.c				\
+			../../src/string/push_back.c				\
+			../../src/string/resize.c				\
+			../../src/string/shrink_to_fit.c			\
+			../../src/vector_ptr/clear.c				\
+			../../src/vector_ptr/delete.c				\
+			../../src/vector_ptr/erase.c				\
+			../../src/vector_ptr/get.c				\
+			../../src/vector_ptr/new.c				\
+			../../src/vector_ptr/pop_back.c				\
+			../../src/vector_ptr/push.c				\
+			../../src/vector_ptr/resize.c				\
 
 OBJS =			$(SRC:.c=.o)
 
