--- a/test/gui_test/Makefile
+++ b/test/gui_test/Makefile
@@ -1,7 +1,11 @@
 NAME =			gui_test
 
 SRC =			main.c				\
-			$(wildcard ../../objects/*/*.c)	\
+			$(wildcard ../../objects/gui/*.c)\
+			$(wildcard ../../objects/button/*.c)\
+			$(wildcard ../../objects/label/*.c)\
+			$(wildcard ../../objects/textbox/*.c)\
+			$(wildcard ../../objects/timer/*.c)\
 
 
 OBJS =			$(SRC:.c=.o)
