fixed size_t issue with get_div_by_name

--- a/test/gui_test/Makefile
+++ b/test/gui_test/Makefile
@@ -2,10 +2,11 @@ NAME =			gui_test
 
 SRC =			main.c				\
 			$(wildcard ../../objects/gui/*.c)\
+			$(wildcard ../../objects/div/*.c)\
 			$(wildcard ../../objects/button/*.c)\
-			$(wildcard ../../objects/label/*.c)\
 			$(wildcard ../../objects/textbox/*.c)\
 			$(wildcard ../../objects/timer/*.c)\
+			$(wildcard ../../objects/picture/*.c)\
 
 
 OBJS =			$(SRC:.c=.o)
