fixed refresh.c in timer.h by adding lapin.h to timer.h

--- a/test/gui_test/Makefile
+++ b/test/gui_test/Makefile
@@ -7,7 +7,7 @@ SRC =			main.c				\
 			$(wildcard ../../objects/textbox/*.c)\
 			$(wildcard ../../objects/timer/*.c)\
 			$(wildcard ../../objects/picture/*.c)\
-
+			$(wildcard ../../objects/label/*.c)\
 
 OBJS =			$(SRC:.c=.o)
 
