Debug et mis en route de Button

--- a/test/button/Makefile
+++ b/test/button/Makefile
@@ -1,26 +1,8 @@
 NAME =			test_button
 
 SRC =			main.c					\
-			../../objects/button/new.c		\
-			../../objects/button/delete.c   	\
-			../../objects/button/event.c	        \
-			../../objects/button/display.c		\
-			../../src/vector_ptr/new.c		\
-			../../src/vector_ptr/push.c		\
-			../../src/vector_ptr/pop_back.c		\
-			../../src/vector_ptr/erase.c		\
-			../../src/vector_ptr/delete.c		\
-			../../src/vector_ptr/resize.c		\
-			../../src/draw/draw_rectangle.c		\
-			../../src/draw/text.c			\
-			../../src/draw/clear_zbuffer.c		\
-			../../src/draw/letter.c			\
-			../../src/draw/set_pixel.c		\
-			../../src/draw/set_zpixel.c		\
-			../../src/draw/get_ratio.c		\
-			../../src/draw/get_value.c		\
-			../../src/draw/blit.c			\
-			../../src/draw/get_npos.c		\
+			$(wildcard ../../objects/*/*.c)		\
+			$(wildcard ../../src/*/*.c)		\
 
 
 OBJS =			$(SRC:.c=.o)
